--- a/assets/css/styling.css
+++ b/assets/css/styling.css
@@ -1,6 +1,9 @@
 body{
     background-color: thistle;
-    
+}
+@font-face {
+    font-family: 'title-font';
+    src: url(../fonts/Oleo_Script_Swash_Caps/OleoScriptSwashCaps-Bold.ttf);
 }
 .header-div{
     display: flex;
@@ -14,9 +17,7 @@ body{
 .maintitle{
     font-weight: bolder;
     list-style: none;
-}
-.navigation{
-    
+    font-family: 'title-font';
 }
 .homebuttonb{
     display: flex;
@@ -28,6 +29,7 @@ body{
 }
 .nav-link2{
     margin-left: 5%;
+    opacity: 0.65;
 
 }
 .hco{
@@ -43,14 +45,17 @@ body{
 }
 .shopicon{
     width: 30%;
-    height: 30%;
+    height: 25%;
 }
 .customericon{
     width: 30%;
-    height: 30%;
+    height: 25%;
     margin-left: 10%;
 }
 .marginrightpartheader{
     display: flex;
     
+}
+p{
+    margin-top: 60px;
 }
