--- a/assets/css/styling.css
+++ b/assets/css/styling.css
@@ -45,11 +45,11 @@ body{
 }
 .shopicon{
     width: 30%;
-    height: 25%;
+    height: 22%;
 }
 .customericon{
     width: 30%;
-    height: 25%;
+    height: 22%;
     margin-left: 10%;
 }
 .marginrightpartheader{
@@ -57,5 +57,29 @@ body{
     
 }
 p{
-    margin-top: 60px;
+    margin-top: 40px;
+    font-family: 'title-font';
+    opacity: 0.7;
+}
+.section1{
+    justify-content: space-between;
+    display: flex;
+}
+.marcxenanawili{
+    width: 50%;
+    margin-left: 3%;
+}
+.marjvenanawili{
+    width: 50%;
+}
+.photo1{
+    width: 70%;
+    height: 70%;
+}
+.btn{
+    border-radius: 5px;
+    background-color: pink;
+    font-weight: bolder;
+    padding: 3%;
+    width: 30%;
 }
