--- a/assets/css/styling.css
+++ b/assets/css/styling.css
@@ -1,5 +1,6 @@
 body{
     background-color: wheat;
+    padding: 2.5%;
 }
 @font-face {
     font-family: 'title-font';
@@ -64,6 +65,7 @@ body{
     justify-content: space-between;
     display: flex;
     margin-top: 100px;
+    width: 100%;
 }
 .marcxenanawili{
     width: 50%;
@@ -73,8 +75,8 @@ body{
     width: 50%;
 }
 .photo1{
-    width: 70%;
-    height: 70%;
+    width: 526px;
+    height: 395px;
 }
 .btn{
     border-radius: 5px;
@@ -85,7 +87,7 @@ body{
     width: 30%;
 }
 .section2{
-    margin-left: 3%;
+
     width: 100%;
     justify-content: center;
 }
@@ -110,5 +112,36 @@ body{
     margin-left: 20px;
 }
 .section3 {
-    margin-left: 30%;
+    justify-content: center;
+    display: flex;
+}
+.bot-title{
+
+}
+.section4{
+    justify-content: center;
+    display: flex;
+}
+.bot-p{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.bluepads{
+    display: flex;
+    width: 100%; 
+    justify-content: space-between;
+    border
+}
+.pad{
+    background-color:aquamarine;
+    width: 259.52px;
+    height: 163px;
+}
+.bottom-section{
+    display: flex;
+    justify-content: space-between;
+    height: 160px;
+}
+.inputdiv{
+    margin-top: 3.5%;
+    
 }
