--- a/assets/css/styling.css
+++ b/assets/css/styling.css
@@ -156,3 +156,13 @@ body{
 .bottnav1{
     list-style: none;
 }
+.bot-p1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 10%;
+}
+.bot-p12{
+    opacity: 0.7;
+}
+.ulm{
+    margin-top: 30%;
+}
